--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The demo of learning webpack , step by step",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/uncledb/webpackDemo/issues"
   },
-  "homepage": "https://github.com/uncledb/webpackDemo#readme"
+  "homepage": "https://github.com/uncledb/webpackDemo#readme",
+  "dependencies": {
+    "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.10.0"
+  }
 }
